--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "formidable": "^3.5.4",
     "node-fetch": "^3.3.2",
     "openai": "^4.96.0",
